[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["yuyagishita <yuyagishita1995@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yuyagishita/hello-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
